--- a/CV/Awesome CV/resume.tex
+++ b/CV/Awesome CV/resume.tex
@@ -74,6 +74,7 @@
 % \extrainfo{extra informations}
 
 % \quote{``Be the change that you want to see in the world."}
+\quote{``An amazing story tellor, for me and person who cooperation with me."}
 
 
 %-------------------------------------------------------------------------------
