--- a/CV/Awesome CV/resume.tex
+++ b/CV/Awesome CV/resume.tex
@@ -53,15 +53,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Aaron}{Coco}
-% \position{Cpp development{\enskip\cdotp\enskip}Security Expert}
-\address{China}
+\name{Yunfei}{Yin}
+\position{UE4{\enskip}C++{\enskip\cdotp\enskip}Software Engineer Expert}
+\address{China ShenZhen}
 
-\mobile{(+86) 156 0690 9302}
+\mobile{(+86) 180 2640 2225}
 \email{youareaaron0@gmail.com}
 \homepage{arrondump.com}
-\github{posquit0}
-\linkedin{posquit0}
+\github{Ceobe33}
+\linkedin{YunfeiYin}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -88,7 +88,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
 {\today}
-{Aaron~~~·~~~Résumé}
+{Yunfei~~~·~~~Résumé}
 {\thepage}
 
 
@@ -97,13 +97,14 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
-\input{resume/experience.tex}
-\input{resume/honors.tex}
+\input{resume/skills.tex}
 \input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
+\input{resume/experience.tex}
+% \input{resume/writing.tex}
+% \input{resume/committees.tex}
 \input{resume/education.tex}
-\input{resume/extracurricular.tex}
+% \input{resume/extracurricular.tex}
+\input{resume/honors.tex}
 
 
 %-------------------------------------------------------------------------------
