--- a/CV/Awesome CV/resume/skills.tex
+++ b/CV/Awesome CV/resume/skills.tex
@@ -1,27 +1,28 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Honors \& Awards}
-
-
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsubsection{School}
+\cvsection{Skills}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvhonors}
+\begin{cvskills}
 
 %---------------------------------------------------------
-  \cvhonor
-    {National Encouragement Scholarship} % Award
-    {DEFCON 26th CTF Hacking Competition World Final} % Event
-    {Xiamen, China} % Location
-    {2020} % Date(s)
+  \cvskill
+    {Version Control} % Category
+    {Git, SVN, Perforce} % Skills
 
 %---------------------------------------------------------
-\end{cvhonors}
+  \cvskill
+    {Programming} % Category
+    {C++, Lua, Python, LaTeX} % Skills
 
+%---------------------------------------------------------
+  \cvskill
+    {Languages} % Category
+    {Chinese, English, Japanese} % Skills
+
+%---------------------------------------------------------
+\end{cvskills}
