--- a/CV/Awesome CV/resume/summary.tex
+++ b/CV/Awesome CV/resume/summary.tex
@@ -8,5 +8,5 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-	Your Raliable project developer at company -. Double years experience in the game development. Super nerd who loves Neovim and Linux and enjoys customize all of the development environment.
+	Raliable project developer for company Tencent. Double years experience in the game development. Super nerd who loves Neovim and Linux and enjoys customize all of the development environment.
 \end{cvparagraph}
