--- a/CV/Awesome CV/resume/education.tex
+++ b/CV/Awesome CV/resume/education.tex
@@ -11,13 +11,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Specialty in Software Technology} % Degree
+    {Xiamen Institute of Software Technology} % Institution
+    {Xiamen, China} % Location
+    {Sep. 2019 - Jul. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Related courses - C language programming, data structure, game engine development basics}
       \end{cvitems}
     }
 
