--- a/CV/Awesome CV/resume.tex
+++ b/CV/Awesome CV/resume.tex
@@ -74,7 +74,7 @@
 % \extrainfo{extra informations}
 
 % \quote{``Be the change that you want to see in the world."}
-\quote{``An amazing story tellor, for me and person who cooperation with me."}
+\quote{``An extraordinary storyteller, capable of captivating both myself and my collaborator, making our interviews a truly memorable experience."}
 
 
 %-------------------------------------------------------------------------------
@@ -90,7 +90,6 @@
 {\today}
 {Yunfei~~~·~~~Résumé}
 {\thepage}
-
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
