--- a/CV/Awesome CV/resume/experience.tex
+++ b/CV/Awesome CV/resume/experience.tex
@@ -17,11 +17,11 @@
     {Mar. 2023 - Oct. 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Expand the game framework and develop new projects} 
-        \item {Communicate overseas business} 
-        \item {Responsible for project performance optimization} 
-        \item {UI resource coordination path reorganization and replacement} 
-        \item {Formulate and improve code specification standards} 
+        \item {Profoundly expand the game architecture, leading the development of new projects, infusing fresh vitality into the adventurous world of One Piece.} 
+        \item {Build bridges across the seas, facilitating efficient communication for overseas business, ensuring seamless integration of the game’s globalization.} 
+        \item {Accurately assess project performance, dedicated to optimization and enhancement, guaranteeing a smooth gaming experience.} 
+        \item {Organize UI resources, optimize the process of path arrangement and replacement, enhancing visual presentation.} 
+        \item {Develop and refine code specification standards, ensuring efficient team collaboration and outstanding code quality.} 
       \end{cvitems}
     }
 
@@ -33,9 +33,9 @@
     {Oct. 2021 - Jul. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Responsible for the development and reconstruction of the game project, improving the players' gaming experience by 60\%} 
-        \item {Coordinate the deployment of work content} 
-        \item {Optimize game logic and improve stability when running on devices} 
+        \item {Committed to the continuous development and refactoring of game projects, achieving a significant leap in the player gaming experience, with an increase of up to 60\% in satisfaction.} 
+        \item {Meticulously coordinated the allocation of work content requirements, ensuring the rational allocation and efficient utilization of team resources.} 
+        \item {Deeply optimized game logic, significantly enhancing the game’s stability across various devices, creating a seamless virtual social space for players.} 
       \end{cvitems}
     }
 
