--- a/CV/Awesome CV/resume/summary.tex
+++ b/CV/Awesome CV/resume/summary.tex
@@ -8,5 +8,5 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-	Raliable project developer for company Tencent. Double years experience in the game development. Super nerd who loves Neovim and Linux and enjoys customize all of the development environment.
+	A dependable project developer with a proven track record at Tencent, boasting two years of specialized experience in game development. A self-proclaimed super nerd, I am passionate about leveraging Neovim and Linux to optimize and customize development environments to perfection.
 \end{cvparagraph}
