--- a/CV/Awesome CV/resume/presentation.tex
+++ b/CV/Awesome CV/resume/presentation.tex
@@ -11,15 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {DevFest Seoul by Google Developer Group Korea} % Event
+    {Wild world game by Tencent} % Event
     {UE4 Development Engineer} % Role
     {ShenZhen, China} % Location
     {Dec. 2023} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Track and assign issues based on current resource allocation to complete tasks within the work plan}
-        \item {Item Resource Center Function Development}
-        \item {Non-intrusive addition of new requirements}
+        \item {Conduct refined task monitoring and allocation to ensure the project progresses with effective resource matching, strictly adhering to the work plan for the efficient completion of all tasks.}
+        \item {Build a comprehensive item resource center, dedicated to functional innovation and development, enhancing the gaming experience.}
+        \item {Employ agile project management methods to achieve the flexible and seamless integration of new requirements, ensuring continuous optimization and scalability of the project.}
       \end{cvitems}
     }
 
