--- a/CV/Awesome CV/resume.tex
+++ b/CV/Awesome CV/resume.tex
@@ -54,13 +54,13 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Yunfei}{Yin}
-\position{UE4{\enskip}C++{\enskip\cdotp\enskip}Software Engineer Expert}
-\address{China ShenZhen}
+\position{UE4 C++ Develop Engineer{\enskip\cdotp\enskip}Software Engineer Expert}
+\address{ShenZhen China}
 
 \mobile{(+86) 180 2640 2225}
 \email{youareaaron0@gmail.com}
-\homepage{arrondump.com}
-\github{Ceobe33}
+% \homepage{arrondump.com}
+% \github{Ceobe33}
 \linkedin{YunfeiYin}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
@@ -95,15 +95,22 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
+%%%%% inner
+% \input{inner-resume/summary.tex}
+% \input{inner-resume/skills.tex}
+% \input{inner-resume/presentation.tex}
+% \input{inner-resume/experience.tex}
+
+%%%%% normal
 \input{resume/summary.tex}
 \input{resume/skills.tex}
 \input{resume/presentation.tex}
 \input{resume/experience.tex}
-% \input{resume/writing.tex}
-% \input{resume/committees.tex}
 \input{resume/education.tex}
-% \input{resume/extracurricular.tex}
 \input{resume/honors.tex}
+% \input{resume/committees.tex}
+% \input{resume/extracurricular.tex}
+% \input{resume/writing.tex}
 
 
 %-------------------------------------------------------------------------------
