--- a/CV/Awesome CV/resume/honors.tex
+++ b/CV/Awesome CV/resume/honors.tex
@@ -18,9 +18,9 @@
 %---------------------------------------------------------
   \cvhonor
     {National Encouragement Scholarship} % Award
-    {DEFCON 26th CTF Hacking Competition World Final} % Event
+    {} % Event
     {Xiamen, China} % Location
-    {2020} % Date(s)
+    {2020, 2021} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
