--- a/CV/Awesome CV/resume/presentation.tex
+++ b/CV/Awesome CV/resume/presentation.tex
@@ -17,9 +17,18 @@
     {Dec. 2023} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Conduct refined task monitoring and allocation to ensure the project progresses with effective resource matching, strictly adhering to the work plan for the efficient completion of all tasks.}
+          % 1
+        \item {Refine task monitoring and allocation to ensure the alignment of project progress with resources, strictly adhering to the work plan for the efficient advancement of task completion.}
+          % 2
         \item {Build a comprehensive item resource center, dedicated to functional innovation and development, enhancing the gaming experience.}
-        \item {Employ agile project management methods to achieve the flexible and seamless integration of new requirements, ensuring continuous optimization and scalability of the project.}
+          % 3
+        \item {Implement agile project management methods to facilitate the flexible and seamless integration of new requirements, ensuring continuous optimization and scalability of the project.}
+          % 4
+        \item {Participate in requirement review meetings to guarantee the completeness and testability of testing requirements.}
+          % 5
+        \item {Communicate with internal departments to understand their procurement needs and specifications.}
+          % 6
+        \item {Establish cross-ocean bridges for efficient communication with overseas business operations, ensuring seamless global integration of the game.}
       \end{cvitems}
     }
 
