--- a/CV/Awesome CV/resume/summary.tex
+++ b/CV/Awesome CV/resume/summary.tex
@@ -8,5 +8,5 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-	A dependable project developer with a proven track record at Tencent, boasting two years of specialized experience in game development. A self-proclaimed super nerd, I am passionate about leveraging Neovim and Linux to optimize and customize development environments to perfection.
+	As a seasoned problem-solver, I am adept at swiftly addressing a variety of complex challenges and delving into the root causes of issues, understanding not just the symptoms but the underlying reasons. This enables me to provide comprehensive solutions. I possess exceptional task comprehension skills and a strong spirit of teamwork, allowing me to communicate effectively with others and collaborate to complete tasks. Additionally, I maintain composure and focus under high-pressure environments and am adaptable to the demands of frequent business travel.
 \end{cvparagraph}
