--- a/CV/Awesome CV/resume.tex
+++ b/CV/Awesome CV/resume.tex
@@ -53,7 +53,7 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Yunfei}{Yin}
+\name{Aaron}{Yun}
 \position{UE4 C++ Develop Engineer{\enskip\cdotp\enskip}Software Engineer Expert}
 \address{ShenZhen China}
 
